--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.13",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/partytown": "^2.1.2",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^5.1.2",
+    "@tailwindcss/typography": "^0.5.15",
+    "astro": "^4.16.13",
+    "astro-embed": "^0.9.0",
+    "astro-font": "^0.1.81",
+    "graphql": "^16.9.0",
+    "graphql-request": "^7.1.2",
+    "sass": "^1.81.0",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3"
   }
 }
